--- a/nbs/04_recursion.ipynb
+++ b/nbs/04_recursion.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "# Recursion Notes and Algorithms\n",
     "\n",
-    "> Notes taken from [Data Structures and Algorithms in Python 1st edition by Goodrich, Michael T., Tamassia, Roberto, Goldwasser, Michael (2013) Hardcover Hardcover – 1732](https://www.amazon.com/Structures-Algorithms-Goodrich-Goldwasser-Hardcover/dp/B011DC80VY/ref=sr_1_16?keywords=data+structures+and+algorithms+in+python&qid=1575950058&sr=8-16)"
+    "Notes taken from: Data Structures and Algorithms in Python 1st edition by Goodrich, Michael T., Tamassia, Roberto, Goldwasser, Michael (2013) Hardcover Hardcover – 1732"
    ]
   },
   {
