updated documentation and notebooks

--- a/nbs/04_recursion.ipynb
+++ b/nbs/04_recursion.ipynb
@@ -1,12 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# default_exp recursion"
+    "# Recursion Notes and Algorithms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes taken from: Data Structures and Algorithms in Python 1st edition by Goodrich, Michael T., Tamassia, Roberto, Goldwasser, Michael (2013) Hardcover Hardcover – 1732"
    ]
   },
   {
@@ -20,12 +25,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Recursion Notes and Algorithms\n",
-    "\n",
-    "Notes taken from: Data Structures and Algorithms in Python 1st edition by Goodrich, Michael T., Tamassia, Roberto, Goldwasser, Michael (2013) Hardcover Hardcover – 1732"
+    "# default_exp recursion"
    ]
   },
   {
@@ -290,6 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# exports\n",
     "def binary_search(data, target, low, high):\n",
     "    \"\"\"return True if target is found\"\"\"\n",
     "    if low > high:\n",
