added median two sorted arrays

--- a/nbs/recursion.ipynb
+++ b/nbs/recursion.ipynb
@@ -406,11 +406,11 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "python3 (dev)",
    "language": "python",
    "name": "dev"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
