--- a/nbs/685-redundant-connection.ipynb
+++ b/nbs/685-redundant-connection.ipynb
@@ -12,7 +12,8 @@
    "metadata": {},
    "source": [
     "```bash\n",
-    "n this problem, a rooted tree is a directed graph such that, there is exactly one node (the root) for which all other nodes are descendants of this node, plus every node has exactly one parent, except for the root node which has no parents.\n",
+    "\n",
+    "In this problem, a rooted tree is a directed graph such that, there is exactly one node (the root) for which all other nodes are descendants of this node, plus every node has exactly one parent, except for the root node which has no parents.\n",
     "\n",
     "The given input is a directed graph that started as a rooted tree with N nodes (with distinct values 1, 2, ..., N), with one additional directed edge added. The added edge has two different vertices chosen from 1 to N, and was not an edge that already existed.\n",
     "\n",
@@ -23,14 +24,18 @@
     "Example 1:\n",
     "Input: [[1,2], [1,3], [2,3]]\n",
     "Output: [2,3]\n",
+    "\n",
     "Explanation: The given directed graph will be like this:\n",
     "  1\n",
     " / \\\n",
     "v   v\n",
     "2-->3\n",
+    "\n",
     "Example 2:\n",
+    "\n",
     "Input: [[1,2], [2,3], [3,4], [4,1], [1,5]]\n",
     "Output: [4,1]\n",
+    "\n",
     "Explanation: The given directed graph will be like this:\n",
     "5 <- 1 -> 2\n",
     "     ^    |\n",
