added new set of questions

--- a/nbs/0004-median-two-sorted-arrays.ipynb
+++ b/nbs/0004-median-two-sorted-arrays.ipynb
@@ -283,6 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "assert medianNew([1],[2]) == 1.5\n",
     "assert medianNew([23,45,46,88],[1,2,3,4]) == 13.5\n",
     "assert medianNew([23,45,46,88],[1,2,3,4,5]) == 5\n",
     "assert medianNew([],[1,2,3,4,5]) == 3\n",
@@ -300,7 +301,7 @@
     "assert medianNew([14, 478, 619, 627, 720], [143, 166, 480, 600, 663]) == 540 \n",
     "assert medianNew([59, 231, 551, 756, 950],[79, 99, 109, 113, 160, 181, 343, 421, 429, 468, 536, 708, 819, 926, 985]) == 425\n",
     "assert medianNew([101, 114, 154, 171, 177, 185, 204, 207, 250, 310, 316, 319, 343, 369, 371, 377, 381, 405, 447, 554, 582, 623, 624, 683, 740, 753, 804, 812, 813, 819, 825, 828, 834, 837, 858, 860, 880, 895, 927, 942, 951, 960, 988],\n",
-    "                       [137, 287, 403, 415, 487, 512, 555, 564, 697, 908, 957])\n",
+    "                       [137, 287, 403, 415, 487, 512, 555, 564, 697, 908, 957]) == 559.5\n",
     "assert medianNew([8, 35, 125, 197, 205, 218, 263, 354, 361, 411, 468, 525, 538, 695, 731, 734, 817, 824, 841, 888, 892, 896, 904],\n",
     "                      [11, 204, 361, 454, 468, 485, 662, 680, 869, 894]) == 485\n",
     "assert medianNew([14, 97, 169, 226, 411, 514, 555, 603, 648, 815, 837, 860, 888, 980, 985],\n",
@@ -347,6 +348,170 @@
     "        else:\n",
     "            pass_count+=1\n",
     "    mb.write(f'passed {pass_count}, failed {fail_count}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Binary Search\n",
+    "\n",
+    "Given a sorted list l and value v return index of element or None if not found:\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "l = [1,2,3,4,5]\n",
+    "\n",
+    "binarySearch(l, 3) -> 2\n",
+    "binarySearch(l, 1) -> 0\n",
+    "binarySearch(l, 0) -> None\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binarySearch(l:List, v: int) -> int:\n",
+    "    if not l:\n",
+    "        return None\n",
+    "    \n",
+    "    i_min = 0\n",
+    "    i_max = len(l)\n",
+    "        \n",
+    "    while i_min <= i_max:    \n",
+    "\n",
+    "        i_mid = (i_min + i_max) //2\n",
+    "\n",
+    "        if l[i_mid] == v:\n",
+    "            return i_mid\n",
+    "        elif l[i_mid] < v:\n",
+    "            i_min = i_mid + 1\n",
+    "        else:\n",
+    "            i_max = i_mid -1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [1,2,3,4,5]\n",
+    "\n",
+    "assert binarySearch(l,1) == 0\n",
+    "assert binarySearch(l,2) == 1\n",
+    "assert binarySearch(l,3) == 2\n",
+    "assert binarySearch(l,4) == 3\n",
+    "assert binarySearch(l,5) == 4\n",
+    "\n",
+    "assert binarySearch(l,-1) == None\n",
+    "assert binarySearch(l,-6) == None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Binary Search Optimized\n",
+    "\n",
+    "Redo of the binary search."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def medianCustom(l: List) -> float:\n",
+    "    if not l:\n",
+    "        return None\n",
+    "    return (l[len(l)//2] + l[(len(l)-1)//2])/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert medianCustom([]) == None\n",
+    "assert medianCustom([1]) == 1\n",
+    "assert medianCustom([1,2]) == 1.5\n",
+    "assert medianCustom([1,2,3]) == 2\n",
+    "assert medianCustom([1,2,3,4]) == 2.5\n",
+    "assert medianCustom([1,2,3,4,5]) == 3\n",
+    "assert medianCustom([1,2,3,4,5,6]) == 3.5\n",
+    "assert medianCustom([1,2,3,4,5,6,7]) == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def indexSearch(a: List, b: List) -> float:\n",
+    "    \n",
+    "    if len(a) > len(b):\n",
+    "        a,b = b,a\n",
+    "    \n",
+    "    if not b:\n",
+    "        return None\n",
+    "    if not a:\n",
+    "        return b[(len(b)-1)//2],  b[(len(b)//2)]\n",
+    "    \n",
+    "    total_len = len(a) + len(b)\n",
+    "    i_min, i_max = 0, len(a)\n",
+    "    \n",
+    "    while i_min <= i_max:\n",
+    "        i_mid = (i_min + i_max) // 2\n",
+    "        j_mid = total_len // 2 - i_mid - 1\n",
+    "        \n",
+    "        # move right\n",
+    "        if i_mid < len(a)-1 and a[i_mid] < b[j_mid-1]:\n",
+    "            i_min = i_mid + 1\n",
+    "        \n",
+    "        elif i_mid > 0 and j_mid < len(b) -1 and a[i_mid-1] > b[j_mid]:\n",
+    "            i_max = i_mid - 1\n",
+    "        \n",
+    "        else:\n",
+    "            return (a[i_mid], b[j_mid])\n",
+    "        \n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert indexSearch([1,2,3,4,5],[6,7,9,10,11]) == (5,6)\n",
+    "assert indexSearch([1],[6]) == (1,6)\n",
+    "assert indexSearch([1,2,3],[]) == (2,2) \n",
+    "assert indexSearch([1,2,3,4],[5,6,7,8]) == (4,5)\n",
+    "assert indexSearch([1,2,3,4], []) == (2,3)\n",
+    "assert indexSearch([6,7,8,9],[1,2,3,4]) == (6,4)\n",
+    "assert indexSearch([115, 380, 824, 875], [134, 149, 602, 672, 792, 821, 826, 836, 849, 957, 981]) == (824, 792)\n",
+    "assert indexSearch([],[529]) == (529, 529)\n",
+    "assert indexSearch([105,206,268,294,371,415,466,472,475,486,518,561,611,652,664,681,745,831,885],[8, 107, 108, 139, 215, 320, 541, 824, 858, 884, 970]) == (541, 475)\n",
+    "assert indexSearch([14, 478, 619, 627, 720], [143, 166, 480, 600, 663]) == (619, 480)\n",
+    "assert indexSearch([59, 231, 551, 756, 950], [79, 99, 109, 113, 160, 181, 343, 421, 429, 468, 536, 708, 819, 926, 985]) == (551, 421)\n",
+    "assert indexSearch([101, 114, 154, 171, 177, 185, 204, 207, 250, 310, 316, 319, 343, 369, 371, 377, 381, 405, 447, 554, 582, 623, 624, 683, 740, 753, 804, \n",
+    "             812, 813, 819, 825, 828, 834, 837, 858, 860, 880, 895, 927, 942, 951, 960, 988],\n",
+    "                       [137, 287, 403, 415, 487, 512, 555, 564, 697, 908, 957]) == (555, 582)\n",
+    "assert indexSearch([8, 35, 125, 197, 205, 218, 263, 354, 361, 411, 468, 525, 538, 695, 731, 734, 817, 824, 841, 888, 892, 896, 904],\n",
+    "                      [11, 204, 361, 454, 468, 485, 662, 680, 869, 894]) == (485, 468)\n",
+    "assert indexSearch([14, 97, 169, 226, 411, 514, 555, 603, 648, 815, 837, 860, 888, 980, 985],\n",
+    "                       [1, 5, 18, 34, 37, 37, 43, 48, 71, 133, 180, 184, 200, 217, 229, 270, 296, 311, 315, \n",
+    "                        319, 321, 374, 376, 385, 393, 446, 462, 473, 490, 501, 538, 547, 555, 582, 583, 595, 601, \n",
+    "                        606, 623, 624, 639, 657, 663, 703, 728, 743, 750, 755, 788, 808, 811, 829, 857, 859, 863, 877, 915, 918, 920, 922, 934, 936, 942, 977, 989]) == (603, 555)"
    ]
   }
  ],
