--- a/nbs/0032-longest-valid-parenthesis.ipynb
+++ b/nbs/0032-longest-valid-parenthesis.ipynb
@@ -121,6 +121,91 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def longestValidParenthesesStack(s: str) -> int:\n",
+    "    stack = []\n",
+    "    stack.append(-1)\n",
+    "    max_len = 0\n",
+    "    for i,c in enumerate(s):\n",
+    "        if s[i] == '(':\n",
+    "            stack.append(i)\n",
+    "        else:\n",
+    "            stack.pop()\n",
+    "            if len(stack) == 0:\n",
+    "                stack.append(i)\n",
+    "            else:\n",
+    "                length = i - stack[-1]\n",
+    "                if length > max_len:\n",
+    "                    max_len = length\n",
+    "    return max_len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert longestValidParenthesesStack(\"()))))))\") == 2\n",
+    "assert longestValidParenthesesStack(\"()\") == 2\n",
+    "assert longestValidParenthesesStack(\")()())\") == 4\n",
+    "assert longestValidParenthesesStack(')())()') == 2\n",
+    "assert longestValidParenthesesStack('()()') == 4\n",
+    "assert longestValidParenthesesStack('(()') == 2\n",
+    "assert longestValidParenthesesStack(\")()()((()))()\") == 12\n",
+    "assert longestValidParenthesesStack(\"()()())()())\") == 6\n",
+    "assert longestValidParenthesesStack(\")()())\") == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longestValidParenthesesDynamicOptimal(s: str) -> int:\n",
+    "    m = [0 for i in range(len(s))]\n",
+    "    longest = 0\n",
+    "    for i,c in enumerate(s):\n",
+    "        if c == '(':\n",
+    "            m[i] = 0\n",
+    "        else:\n",
+    "            if i == 0 or i - m[i-1] - 1 < 0 or s[i -m[i-1] -1] == ')':\n",
+    "                m[i] = 0\n",
+    "            else:\n",
+    "                extra = 0\n",
+    "                if i - m[i-1]  - 2 > 0:\n",
+    "                    extra = m[i-m[i-1]-2]\n",
+    "                \n",
+    "                m[i] = 2 + m[i-1] + m[i-m[i-1]-1] + extra\n",
+    "                if m[i] > longest:\n",
+    "                    longest = m[i]\n",
+    "    return longest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert longestValidParenthesesDynamicOptimal('()') == 2\n",
+    "assert longestValidParenthesesDynamicOptimal(\"()))))))\") == 2\n",
+    "assert longestValidParenthesesDynamicOptimal(\")()())\") == 4\n",
+    "assert longestValidParenthesesStack(')())()') == 2\n",
+    "assert longestValidParenthesesStack('()()') == 4\n",
+    "assert longestValidParenthesesStack('(()') == 2\n",
+    "assert longestValidParenthesesStack(\")()()((()))()\") == 12\n",
+    "assert longestValidParenthesesStack(\"()()())()())\") == 6\n",
+    "assert longestValidParenthesesStack(\")()())\") == 4\n",
+    "assert longestValidParenthesesStack(\")))))))((((()))))()((((()))\") == 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
