--- a/nbs/0072-edit-distance.ipynb
+++ b/nbs/0072-edit-distance.ipynb
@@ -54,9 +54,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def minDistance(word1: str, word2: str) -> int:\n",
-    "    pass"
+    "    passpass"
    ]
   },
   {
