--- a/nbs/0685-redundant-connection.ipynb
+++ b/nbs/0685-redundant-connection.ipynb
@@ -55,10 +55,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import graphviz\n",
     "from typing  import List\n",
     "\n",
     "def findRedundantDirectedConnection(edges: List[List[int]]) -> List[int]:\n",
-    "        pass"
+    "    visited = set()\n",
+    "    faulty_edge = None\n",
+    "    for idx, (parent, child) in enumerate(edges):        \n",
+    "        \n",
+    "        if child in visited:\n",
+    "            faulty_edge = parent\n",
+    "        \n",
+    "        if idx == 0:\n",
+    "            visited.add(parent)\n",
+    "            \n",
+    "        visited.add(child)\n",
+    "    \n",
+    "    return faulty_edge"
    ]
   },
   {
@@ -66,7 +79,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import fastai2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert findRedundantDirectedConnection([[1,2], [1,3], [2,3]]) == 2\n",
+    "assert findRedundantDirectedConnection([[1,2], [2,3], [3,4], [4,1], [1,5]]) == 4"
+   ]
   }
  ],
  "metadata": {
